# floship_django_test_project

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
config/: settings.py  urls.py
config/components/: database.py  global_settings.py
config/db_routers/: main_router.py
store/: admin.py  models.py  router.py  serializers.py  services.py  views.py
store/migrations/: 0001_initial.py
warehouse/: admin.py  models.py  router.py  serializers.py  services.py  views.py
warehouse/migrations/: 0001_initial.py
