[tool.poetry]
name = "floship-django-test-project"
version = "0.1.0"
description = ""
authors = ["Artem Samoilov <samoylovartem07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
split-settings = "^1.0.0"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
requests = "^2.31.0"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
